Fixed layout on small screens and added hamburger menu

--- a/styles.css
+++ b/styles.css
@@ -40,31 +40,6 @@ figure {
     text-align: center;
 }
 
-/* Responsive layout */
-@media screen and (max-width: 700px) {
-    .container, .menu, .row {
-        flex-direction: column;
-    }
-}   
-
-.sidenav {
-    display: flex;
-    flex-direction: column;
-    max-width: 100px;
-    height: 100%;
-    position: fixed;
-    z-index: 1;
-    background-color: var(--bg-body);
-    border-right: 1px solid var(--border-opaque);
-    /* border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top: 1px solid var(--border-opaque);
-    border-bottom: 1px solid var(--border-opaque); */
-    padding: 10px;
-    background-color: var(--bg-body);
-    overflow-x: hidden;
-}
-
 /* Top header and menu */
 header {
     display: flex;
@@ -76,13 +51,36 @@ header {
 
 .menu {
     position: sticky;
-    width: 100%;
     top: 0;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     background-color: var(--bg-container);
     border-bottom: 1px solid var(--border-opaque);
+}
+
+/* Hide the actual checkbox, it's just for tracking state */
+.menu-toggle {
+    display: none;
+}
+
+/* Hide the hamburger icon by default (desktop) */
+.hamburger-icon {
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25px;
+    height: 18px;
+    cursor: pointer;
+    margin: 10px;
+}
+
+.hamburger-icon span {
+    display: block;
+    height: 3px;
+    width: 100%;
+    background-color: var(--text2);
 }
 
 /* Links */
@@ -124,7 +122,7 @@ a:visited {
   flex-direction: column;
 }
 
-/* Projects */
+/* Project header and cards */
 div.project-header {
     display: flex;
     flex-direction: column;
@@ -180,7 +178,7 @@ div.project-description {
     display: flex;
     flex-direction: column;
     margin-left: 170px;
-    margin-right: 170px;
+    margin-right: 170px;    
 }
 
 .project-description div.text-block {
@@ -196,7 +194,7 @@ div.project-description {
 }
 
 img {
-    max-width: 900px;
+    max-width: 100%;
     height: auto;
 }
 
@@ -208,4 +206,48 @@ footer {
     padding: 10px;
     font-size: 70%;
     color: var(--text2);
+}
+
+/* Responsive layout */
+@media screen and (max-width: 700px) {
+    .container, .menu, .row {
+        flex-direction: column;
+    }
+    div.project-description {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    .project-description div.text-block {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    img {
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .menu {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    /* Show the hamburger icon on mobile */
+    .hamburger-icon {
+        display: flex;
+    }
+
+    .menu-links {
+        display: flex; /* keep this always flex now, not none */
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s ease;
+    }
+
+    .menu-toggle:checked ~ .menu-links {
+        max-height: 300px; /* large enough to fit all your links */
+    }
 }
